Calendar/styles.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  color: #F6F7F3;
  text-align: center;
  text-shadow: 1px 1px #201622;
  background-color: #F6F7F3;
  font-family: "Source Sans Pro", sans-serif;
}

header {
  padding: 20px;
  background: #4C7EE5;
  border: solid 2px #201622;
}
header h1 {
  padding-bottom: 20px;
  font-size: 48px;
}
header h2 {
  font-size: 30px;
}

section h2 {
  color: #2D3B68;
  text-shadow: none;
  margin: 20px;
}
section .select-menu {
  display: inline-block;
  background-color: #4C7EE5;
  width: auto;
  margin: auto;
  padding: 20px;
  border: solid 2px #201622;
  border-radius: 10px;
}
section .select-menu select, section .select-menu button {
  padding: 5px;
  border: solid 2px #201622;
  border-radius: 5px;
  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
  font-weight: bold;
}
section .select-menu select select:active, section .select-menu select button:active, section .select-menu button select:active, section .select-menu button button:active {
  border: 3px solid #201622;
}
section .select-menu button {
  background-color: #2D3B68;
  color: #F6F7F3;
}

main h2 {
  font-size: 30px;
}
main h3 {
  font-size: 12px;
}
main .change_month {
  display: flex;
  justify-content: center;
  width: 100%;
  margin: 40px 0 20px 0;
}
main .change_month .month {
  display: flex;
  justify-content: center;
  background-color: #4C7EE5;
  width: 200px;
  height: 50px;
  font-size: 30px;
  border: solid 2px #201622;
}
main .change_month .arrow {
  border: solid #201622;
  border-width: 0 6px 6px 0;
  display: inline-block;
  padding: 3px;
  height: 20px;
  width: 20px;
  margin-top: 12px;
}
main .change_month .left {
  transform: rotate(135deg);
}
main .change_month .right {
  transform: rotate(-45deg);
}
main .container {
  display: flex;
  justify-content: center;
  display: grid;
  margin: auto;
  grid-template-columns: repeat(auto-fit, 250px);
  grid-auto-rows: 250px;
  grid-gap: 10px;
  max-width: 960px;
  margin: 0 auto;
  margin-bottom: 400px;
}
main .container div {
  background-color: #4C7EE5;
  padding: 10px;
  overflow: visible;
  border: 2px solid #201622;
}
main .container div h3:nth-of-type(1n+2) {
  margin-top: 10px;
}
main .container div:nth-child(even) {
  background-color: #2D3B68;
}
main .container div:hover {
  transform: scale(2);
  transition: all 0.5s ease-in-out;
  min-height: 250px;
  height: fit-content;
}
main .container div:hover h3 {
  font-size: 20px;
  margin-bottom: 10px;
}
main .container div:hover p {
  display: block;
  font-size: 12px;
  margin-bottom: 10px;
}
main .container div p {
  display: none;
}

.top_reset {
  text-align: center;
  position: fixed;
  bottom: 40px;
  left: 10px;
  width: 60px;
  height: 60px;
  font-size: 40px;
  text-shadow: 1px 1px #201622;
  color: #F6F7F3;
  background-color: #4C7EE5;
  font-weight: bold;
  border: #201622 solid 2px;
  border-radius: 50%;
  text-decoration: none;
}

footer {
  display: flex;
  flex-direction: row;
  background-color: #4C7EE5;
  width: 100%;
  position: fixed;
  bottom: 0;
  border: solid 2px #201622;
  padding: 5px;
}

footer p {
  margin-right: 15px;
}

/*# sourceMappingURL=styles.css.map */

